flake8_strict_output.txt
.\archive\disabled_pages\RIGEL FOREX ALPACA ADAPTABLE TO MT5.py:59:5: E999 IndentationError: expected an indented block after 'if' statement on line 57
    if mean_reversion_signal(pair):
    ^
.\archive\disabled_pages\RIGEL FOREX PREDICTION EA#.py:18:19: F821 undefined name 'LSTM_Model'
    lstm_signal = LSTM_Model.predict(recent_data)
                  ^
.\archive\disabled_pages\RIGEL FOREX PREDICTION EA#.py:19:18: F821 undefined name 'XGB_Model'
    xgb_signal = XGB_Model.predict(recent_data)
                 ^
.\archive\disabled_pages\RIGEL FOREX PREDICTION EA#.py:31:16: F821 undefined name 'EMA'
    ema_fast = EMA(pair, 20)
               ^
.\archive\disabled_pages\RIGEL FOREX PREDICTION EA#.py:32:16: F821 undefined name 'EMA'
    ema_slow = EMA(pair, 50)
               ^
.\archive\disabled_pages\RIGEL FOREX PREDICTION EA#.py:33:11: F821 undefined name 'RSI'
    rsi = RSI(pair, 14)
          ^
.\archive\disabled_pages\RIGEL FOREX PREDICTION EA#.py:34:17: F821 undefined name 'BollingerBands'
    bollinger = BollingerBands(pair, 20)
                ^
.\archive\disabled_pages\RIGEL FOREX PREDICTION EA#.py:36:49: F821 undefined name 'PriceNearLowerBand'
    return ema_fast > ema_slow and rsi < 45 and PriceNearLowerBand(pair, bollinger)
                                                ^
.\archive\disabled_pages\RIGEL FOREX PREDICTION EA#.py:40:20: F821 undefined name 'TimeHour'
    current_hour = TimeHour(TimeCurrent())
                   ^
.\archive\disabled_pages\RIGEL FOREX PREDICTION EA#.py:40:29: F821 undefined name 'TimeCurrent'
    current_hour = TimeHour(TimeCurrent())
                            ^
.\archive\disabled_pages\RIGEL FOREX PREDICTION EA#.py:43:27: F821 undefined name 'GetRecentData'
            recent_data = GetRecentData(pair)
                          ^
.\archive\disabled_pages\RIGEL FOREX PREDICTION EA#.py:47:20: F821 undefined name 'enforce_liquidity'
                if enforce_liquidity():
                   ^
.\archive\disabled_pages\RIGEL FOREX PREDICTION EA#.py:49:32: F821 undefined name 'calculate_position_size'
                    lot_size = calculate_position_size(AccountEquity(), pair, sl)
                               ^
.\archive\disabled_pages\RIGEL FOREX PREDICTION EA#.py:49:56: F821 undefined name 'AccountEquity'
                    lot_size = calculate_position_size(AccountEquity(), pair, sl)
                                                       ^
.\archive\disabled_pages\RIGEL FOREX PREDICTION EA#.py:50:21: F821 undefined name 'PlaceBuyOrder'
                    PlaceBuyOrder(pair, lot_size, SL=sl, TP=tp)                    ^
1     E999 IndentationError: expected an indented block after 'if' statement on line 57
14    F821 undefined name 'LSTM_Model'
15
